# dnstest

./: CHANGES  README.md  dnstest.go  go.mod  go.sum
DNS-Compliance-Testing-master/: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  README  aclocal.m4  configure.ac  genreport  genreport.c  genreport.md
conf/: loadcase.go  loadconfig.go
dig/: check.go  dig.go
doc/: 流程图.drawio
etc/: config.json  seelog.xml  testcase.csv
log/: log.go
util/: pprof.go  syslinux.go
